[MyReportActivity] Add new View [AndroidManifest] Now start Activity is MyReportActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,7 @@
         <activity
             android:name=".activity.MyInsuranceActivity"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.AskPriseActivity"
@@ -26,7 +22,13 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".activity.MyReportActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>>
         <activity
             android:name=".activity.PersonalDataActivity"
             android:launchMode="singleTask" />
