[add two activities]add two new activities and deal with hard code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,20 +21,33 @@
         <activity
             android:name=".activity.AskPriseActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".activity.MyReportActivity"
             android:launchMode="singleTask" />
         <activity
             android:name=".activity.PersonalDataActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".activity.EditPersonalDataActivity" />
-        <activity android:name=".activity.IDCardSampleFrontActivity" />
-        <activity android:name=".activity.IDCardSampleOppositeActivity" />
-        <activity android:name=".activity.InsuranceWithFragmentActivity"
+        <activity
+            android:name=".activity.EditPersonalDataActivity"
+            android:launchMode="singleTask"/>
+        <activity
+            android:name=".activity.IDCardSampleFrontActivity"
+            android:launchMode="singleTask"/>
+        <activity
+            android:name=".activity.IDCardSampleOppositeActivity"
+            android:launchMode="singleTask"/>
+        <activity
+            android:name=".activity.InsuranceWithFragmentActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.MyInsuranceBuyNothingActivity"
+            android:launchMode="singleTask" >
+
+        </activity>
+        <activity
+            android:name=".activity.PickInsuranceKindActivity"
             android:launchMode="singleTask">
 
         </activity>
     </application>
-
 </manifest>
