[set two flow]set all activity to two flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MyInsuranceActivity"
-            android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.AskPriseActivity"
             android:launchMode="singleTask" />
@@ -29,25 +23,31 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".activity.EditPersonalDataActivity"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.IDCardSampleFrontActivity"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.IDCardSampleOppositeActivity"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.InsuranceWithFragmentActivity"
             android:launchMode="singleTask" />
         <activity
             android:name=".activity.MyInsuranceBuyNothingActivity"
-            android:launchMode="singleTask" >
-
-        </activity>
+            android:launchMode="singleTask" />
         <activity
             android:name=".activity.PickInsuranceKindActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.MainActivity"
             android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
+
 </manifest>
